--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,14 @@ nav li {
     margin: 50px;
 }
 
+a {
+    color:#CBB26A;
+}
+
+a:hover {
+    color: #b7c5cf;
+}
+
 nav a {
     text-decoration-line: double;
     font-size: 1.6em;
